generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model Location {
  id        String   @id @default(uuid()) @db.Uuid
  name      String
  country   String?
  admin1    String?
  latitude  Float
  longitude Float
  /// When true, the refresh worker includes this location. Selected/primary only.
  tracked   Boolean  @default(false)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  forecastDays ForecastDay[]
  geocodeBestFor GeocodeCache[] @relation("GeocodeBestLocation")

  @@unique([latitude, longitude])
  @@index([tracked])
  @@map("locations")
}

model GeocodeCache {
  id              String   @id @default(uuid()) @db.Uuid
  queryNormalized String   @unique @map("query_normalized")
  resultsJson     Json     @map("results_json")
  bestLocationId  String?  @map("best_location_id") @db.Uuid
  fetchedAt       DateTime @map("fetched_at")

  bestLocation Location? @relation("GeocodeBestLocation", fields: [bestLocationId], references: [id])

  @@map("geocode_cache")
}

model ForecastDay {
  id            String   @id @default(uuid()) @db.Uuid
  locationId    String   @map("location_id") @db.Uuid
  forecastDate  DateTime @map("forecast_date") @db.Date
  tempMaxC      Float?   @map("temp_max_c")
  tempMinC      Float?   @map("temp_min_c")
  precipMm      Float?   @map("precip_mm")
  precipProbPct Float?   @map("precip_prob_pct")
  windMaxKmh    Float?   @map("wind_max_kmh")
  snowfallCm    Float?   @map("snowfall_cm")
  waveHeightM   Float?   @map("wave_height_m")
  weatherCode   Int?     @map("weather_code")
  rawJson       Json?    @map("raw_json")
  fetchedAt     DateTime @map("fetched_at")

  location Location @relation(fields: [locationId], references: [id], onDelete: Cascade)

  @@unique([locationId, forecastDate])
  @@map("forecast_days")
}

/// Singleton row: id must always be 1
model RefreshMeta {
  id            Int       @id
  lastSuccessAt DateTime? @map("last_success_at")
  lastAttemptAt DateTime? @map("last_attempt_at")
  lastError     String?   @map("last_error")

  @@map("refresh_meta")
}
